--- a/font.css
+++ b/font.css
@@ -15,3 +15,18 @@
     src: url('roboto-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+}
+
+@font-face {
+    font-family: 'pt_serifregular';
+    src: url('fonts/ptserif-regular1-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'pt_serifbold';
+    src: url('fonts/ptserif-bold1-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
