--- a/font.css
+++ b/font.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: 'robotobold';
-    src: url('roboto-bold-webfont.woff') format('woff');
+    src: url('fonts/roboto-bold-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -12,7 +12,7 @@
 
 @font-face {
     font-family: 'robotoregular';
-    src: url('roboto-regular-webfont.woff') format('woff');
+    src: url('fonts/roboto-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
