--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ body {
 .menu__item {
   font-family: 'Museo Sans Cyrl', arial, helvetica, sans-serif;
   padding-right: 34px;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 .main{
@@ -51,4 +53,7 @@ body {
 
 .main__button {
   font-family: 'Museo Sans Cyrl',arial, helvetica, sans-serif;
+  cursor: pointer;
+  text-decoration: none;
+  border-radius: 48px;
 }
