--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .logo{
   width: 146px;
   height: 55px;
-  background: url('img/logo1920.svg');
+  background: no-repeat url('img/logo1920.svg');
   padding: 0 49% 129px 0;
 }
 
@@ -61,4 +61,8 @@ body {
   background: color #D4BEA3;
   width: 294px;
   height: 62px;
+}
+
+.hamburger-menu{
+  display: none;
 }
