--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   width: 146px;
   height: 55px;
   background: no-repeat url('img/logo1920.svg');
-  padding: 0 49% 129px 0;
+  padding: 88px 49% 129px 0;
 }
 
 .menu {
