--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@ body {
 .main__title_1{
   font: bold 280px/371px 'pt_serifbold',arial, helvetica, sans-serif;
   color: #F8EEE4;
+  opacity: .4;
+  margin: 0;
 }
 
 .main__title_2 {
