--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
   cursor: pointer;
   text-decoration: none;
   border-radius: 48px;
-  background: no-repeat color #D4BEA3;
+  background: no-repeat #D4BEA3;
   color: #FFF;
   padding: 17px 86px;
 }
