--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 .menu__item {
-  font-family: 'Museo Sans Cyrl', arial, helvetica, sans-serif;
+  font: 22px/26px 'Museo Sans Cyrl', arial, helvetica, sans-serif;
   padding-right: 34px;
   cursor: pointer;
   text-decoration: none;
@@ -42,14 +42,14 @@ body {
 }
 
 .main__title_1{
-  font: bold 280px/371px 'pt_serifbold',arial, helvetica, sans-serif;
+  font: bold 280px/211px 'pt_serifbold',arial, helvetica, sans-serif;
   color: #F8EEE4;
   opacity: .4;
   margin: 0;
 }
 
 .main__title_2 {
-  font: bold 98px/130px 'pt_serifbold',arial, helvetica, sans-serif;
+  font: bold 98px/0 'pt_serifbold',arial, helvetica, sans-serif;
   color: #F8EEE4;
 }
 
