--- a/style.css
+++ b/style.css
@@ -78,3 +78,114 @@ body {
 .hamburger-menu{
   display: none;
 }
+
+@media (max-width: 768px) {
+  .hamburger-menu {
+  visibility: hidden;
+  position: absolute;
+  z-index: 999;
+}
+
+#menu__toggle {
+  opacity: 0;
+}
+
+.menu__btn {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  align-self: flex-end;
+  margin-left: 276px;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
+  z-index: 1;
+  margin-top: 7px;
+}
+
+.menu__btn >span,
+.menu__btn >span::before,
+.menu__btn >span::after {
+  display: block;
+  position: absolute;
+  width: 25px;
+  height: 3px;
+  align-self: flex-end;
+  background-color: #fcf5ed;
+}
+
+.menu__btn >span::before {
+  content: '';
+  top: -8px;
+}
+
+.menu__btn >span::after {
+  content: '';
+  top: 8px;
+}
+
+.menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 176px 0;
+  list-style: none;
+  text-align: center;
+  background-color: #fff;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+  transition-duration: 0.25s;
+}
+
+.menu__item_hamburger-menu {
+  display: block;
+  padding: 12px 24px;
+  color: #000;
+  font-family: 'Museo_Sans_Cyrl', sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 36px;
+  text-decoration: none;
+}
+
+.menu__item:hover {
+  background-color: #172f27;
+}
+
+#menu__toggle:checked~ .menu__btn>span {
+  transform: rotate(45deg);
+}
+
+#menu__toggle:checked~ .menu__btn>span::before {
+  top: -24px;
+  left: -10px;
+  transform: rotate(0);
+  background-color: #000;
+}
+
+#menu__toggle:checked~ .menu__btn>span::after {
+  top: -24px;
+  left: -10px;
+  transform: rotate(90deg);
+  background-color: #000;
+}
+
+#menu__toggle:checked~ .menu__box {
+  visibility: visible;
+  left: 0;
+}
+
+.menu__btn>span,
+.menu__btn>span::before,
+.menu__btn>span::after {
+  transition-duration: 0.25s;
+}
+
+.menu__item {
+  transition-duration: 0.25s;
+}
+}
