--- a/style.css
+++ b/style.css
@@ -34,9 +34,7 @@ body {
   color: #F8EEE4;
 }
 
-.main{
-  display: flex;
-}
+.main{}
 
 .main__title_1{
   font: bold 280px/222px 'pt_serifbold',arial, helvetica, sans-serif;
