--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ body {
   background: top right no-repeat url('img/picture1.svg'),
     no-repeat url('img/picture2.svg'),
     no-repeat url('img/picture3.svg');
+    height: 422px;
 }
 
 .hamburger-menu{
