--- a/style.css
+++ b/style.css
@@ -30,13 +30,15 @@ body {
 
 .menu__item {
   font: 22px/26px 'Museo Sans Cyrl', arial, helvetica, sans-serif;
-  padding-right: 34px;
+  padding-right: 31.3px;
   cursor: pointer;
   text-decoration: none;
   color: #F8EEE4;
 }
 
-.image{}
+.main{
+
+}
 
 .main__title_1{
   font: bold 280px/222px 'pt_serifbold',arial, helvetica, sans-serif;
@@ -56,7 +58,7 @@ body {
   width: 551px;
   height: 55px;
   color: #F8EEE4;
-  padding-bottom: 81px;
+  padding-bottom: 0 0 81px 21px;
 }
 
 .main__button {
@@ -68,6 +70,7 @@ body {
   background: no-repeat #D4BEA3;
   color: #FFF;
   padding: 17px 86px;
+  margin-left: 21px;
 }
 
 .hamburger-menu{
