--- a/font.css
+++ b/font.css
@@ -7,7 +7,7 @@
 
 @font-face {
     font-family: 'Museo Sans Cyrl';
-    src: url('fonts/ptserif-bold1-webfont.woff') format('woff');
+    src: url('fonts/MuseoSansCyrl100.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
