--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ body {
 }
 
 .main{
-
+  background: top 56px right 240px no-repeat url(img/picture2.svg), top 36px right 559px no-repeat url(img/picture1.svg),top 56px right no-repeat url(img/picture3.svg);
+  width: 1720px;
 }
 
 .main__title_1{
