--- a/style.css
+++ b/style.css
@@ -93,8 +93,11 @@ body {
 }
 
 @media (max-width: 768px) {
-  .wrapper {
-  max-width: 87%;
+.body{
+  background: url('img/background_mobile.svg');
+}
+
+.wrapper {
   padding: 0;
 }
 
@@ -111,15 +114,16 @@ body {
   background: url('img/logomobile.svg');
 }
 
-.menu { display: none; }
+.menu {
+  display: none;
+}
 
 .main {
   text-align: center;
   padding: 74% 0 0 0;
-  background: top center no-repeat url('img/mobile.svg');
 }
 
-.main__title {
+.main__title_1 {
   margin: 18px auto 44px;
   padding-left: 6px;
   font: 30px/40px 'pt_serifbold', arial, helvetica, sans-serif;
@@ -127,16 +131,20 @@ body {
   max-height: 108px;
 }
 
+.main__title_2{
+  margin: auto;
+}
+
 .main__subtitle {
   margin: 0 auto 34px;
   padding-left: 6px;
-  font: 16px/19px 'Roboto', arial, helvetica, sans-serif;
+  font: 16px/19px 'Museo Sans Cyrl', arial, helvetica, sans-serif;
   max-width: 238px;
   max-height: 57px;
 }
 
 .main__button {
-  font: 14px/16px 'Roboto', arial, helvetica, sans-serif;
+  font: 14px/16px 'Museo Sans Cyrl', arial, helvetica, sans-serif;
   padding: 14px 25px 13px 16px;
 }
 
