--- a/style.css
+++ b/style.css
@@ -94,61 +94,24 @@ body {
 
 @media (max-width: 768px) {
 .body{
-  background: url('img/background_mobile.svg');
+  background: no-repeat url('img/background_mobile.svg');
 }
 
 .wrapper {
-  padding: 0;
-}
-
-.header {
-  margin: 24px auto 28px;
-  padding: 0;
-  display: flex;
-  justify-content: space-between;
+  margin: 0;
 }
 
 .logo {
-  width: 36px;
-  height: 35px;
-  background: url('img/logomobile.svg');
+  margin-top: 35px;
+  padding-top: 74px;
+  background: bottom 84px right url('img/logomobile.svg');
 }
 
 .menu {
   display: none;
 }
 
-.main {
-  text-align: center;
-  padding: 74% 0 0 0;
-}
-
-.main__title_1 {
-  margin: 18px auto 44px;
-  padding-left: 6px;
-  font: 30px/40px 'pt_serifbold', arial, helvetica, sans-serif;
-  max-width: 268px;
-  max-height: 108px;
-}
-
-.main__title_2{
-  margin: auto;
-}
-
-.main__subtitle {
-  margin: 0 auto 34px;
-  padding-left: 6px;
-  font: 16px/19px 'Museo Sans Cyrl', arial, helvetica, sans-serif;
-  max-width: 238px;
-  max-height: 57px;
-}
-
-.main__button {
-  font: 14px/16px 'Museo Sans Cyrl', arial, helvetica, sans-serif;
-  padding: 14px 25px 13px 16px;
-}
-
-  .hamburger-menu {
+.hamburger-menu {
   visibility: hidden;
   position: absolute;
   z-index: 999;
