--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
 .logo {
   margin-top: 35px;
   padding-top: 74px;
-  background: bottom 84px right url('img/logomobile.svg');
+  background: bottom 84px right  no-repeat url('img/logomobile.svg');
 }
 
 .menu {
